--- a/css/map.css
+++ b/css/map.css
@@ -133,15 +133,26 @@ div#control {
 }
 
 div#tweets { 
-  margin-top: 20px;
-  position: relative;
+  margin-top: 10px;
   height: 50%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 div#cloud {
   margin-top: 20px;
 }
 
+div#sortPref {
+  font-size: 12px;
+  color: #555;
+  margin: 0px;
+  padding-left: 10px;
+}
+
+.link-visited {
+  color: #777;
+}
 
 .tweet-container {
   list-style:none;
