--- a/css/chart.css
+++ b/css/chart.css
@@ -1,6 +1,6 @@
 .chart {
-  position: relative;
-  top: 40px;
+  position: absolute;
+  bottom: 0px;
   font: 10px sans-serif;
   border-radius: 5px;
   //border-bottom: 2px;
@@ -64,7 +64,7 @@ rect.pane {
   float: left;
   //position:absolute;
   position:relative;
-  width: 400px;
+  width: 220px;
   height:100%;
   //margin-top:0px;
 }
