--- a/css/map.css
+++ b/css/map.css
@@ -121,11 +121,11 @@ button#gridLarge {
 
 div#mapview {
   position: fixed;
-  top: 247px;
-  //top: 40px;
+  //top: 247px;
+  top: 40px;
   left: 400px;
   right: 0;
-  bottom: 0;
+  bottom: 207px;
 }
 
 div#map {
@@ -157,9 +157,12 @@ div#map {
 
 div#control {
   position: absolute;
+  //position: fixed;
   width: 400px;
-  height: 100%;
-  top: 247px;
+  //height: 100%;
+  padding-top: 10px;
+  top: 40px;
+  bottom: 207px;
   border-radius: 5px;
   webkit-box-shadow: 3px 0 3px rgba(0,0,0,.25);
   box-shadow: 3px 0 3px rgba(0,0,0,.25);
@@ -168,17 +171,17 @@ div#control {
 
 div#tweets { 
   //border-radius: 5px;
-  //border-top: 1px solid #888;
+  border-top: 1px solid #888;
   border-bottom: 2px solid #888;
   margin-top: 10px;
-  height: 48%;
+  height: 68%;
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
 div#cloud {
   margin-top: 0px;
-  height: 20%;
+  height: 24%;
 }
 
 div#sortPref {
