--- a/css/map.css
+++ b/css/map.css
@@ -278,6 +278,8 @@ div#numTokensText {
 }
 
 .anim-input {
+    webkit-box-shadow: 0 0 2px rgba(255,255,255,.25);
+    box-shadow: 0 0 2px rgba(255,255,255,.25);
     border: none!important;
     margin-bottom: 12px;
     background-size: cover;
