--- a/css/chart.css
+++ b/css/chart.css
@@ -1,7 +1,19 @@
+//.chart {
+//  position: absolute;
+//  bottom: 0px;
+//  font: 10px sans-serif;
+//  border-radius: 5px;
+//  //border-bottom: 2px;
+//  webkit-box-shadow: 3px 0 3px rgba(0,0,0,.25);
+//  box-shadow: 3px 0 3px rgba(0,0,0,.25);
+//}
+
 .chart {
-  position: absolute;
+  position: fixed;
   bottom: 0px;
+  left: 400px;
   font: 10px sans-serif;
+  background-color: white;
   border-radius: 5px;
   //border-bottom: 2px;
   webkit-box-shadow: 3px 0 3px rgba(0,0,0,.25);
@@ -63,19 +75,21 @@ rect.pane {
 .chart-settings {
   float: left;
   //position:absolute;
-  position:relative;
-  width: 220px;
-  height:100%;
+  //position:relative;
+  //width:100%;
+  //height:100%;
   //margin-top:0px;
 }
 
 .chart-compare { 
-  position: relative;
+  //position: relative;
+  float:left;
   margin-top:10px;
   font-size: 12px;
 }
 
 .compare-input {
+  float:left;
   height: 10px;
   width: 200px;
   margin-left: 10px;
@@ -87,20 +101,20 @@ rect.pane {
 }
 
 .chart-details {
-  width: 250px;
-  //float: left;
+  float: left;
   list-style: none;
   margin-top: 5px;
 }
 
 .detail-container {
-  position: relative;
-  float: top;
+  float: left;
+  //float: top;
   display: block;
-  margin: 2px 10px 2px 10px;
+  margin: 8px 10px 2px 10px;
 }
 
 .detail { 
+  float:left;
   margin: 0;
   min-height: 20px;
   font-size: 11px;
