--- a/css/map.css
+++ b/css/map.css
@@ -178,10 +178,10 @@ div#control {
   position: absolute;
   //position: fixed;
   width: 400px;
-  //height: 100%;
+  height: 100%;
   padding-top: 10px;
   top: 40px;
-  bottom: 207px;
+  //bottom: 207px;
   border-radius: 5px;
   webkit-box-shadow: 3px 0 3px rgba(0,0,0,.25);
   box-shadow: 3px 0 3px rgba(0,0,0,.25);
@@ -193,14 +193,14 @@ div#tweets {
   border-top: 1px solid #888;
   border-bottom: 2px solid #888;
   margin-top: 10px;
-  height: 68%;
+  height: 67%;
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
 div#cloud {
   margin-top: 0px;
-  height: 24%;
+  height: 23%;
 }
 
 div#sortPref {
