Changed stop to really pink and added heatmap favicon

--- a/css/map.css
+++ b/css/map.css
@@ -316,7 +316,7 @@ div#numTokensText {
     
 .stop-icon {
     //border: none!important;
-    background: url('../img/stop_pink.png') no-repeat center center;
+    background: url('../img/stop_reallypink.png') no-repeat center center;
     width:60px;
     height:30px;
 }
