Now have jquery buttonset for words/users buttons and behavior is correct when you type a user in instead of just clicking on one in the word cloud

--- a/css/map.css
+++ b/css/map.css
@@ -211,6 +211,8 @@ div#cloudBox{
 div#cloudSource{
   float: right;
   padding-right: 10px;
+  margin-top: 5px;
+  font-size: 11px;
 }
 
 div#cloud {
