--- a/css/map.css
+++ b/css/map.css
@@ -198,26 +198,27 @@ div#tweets {
   border-top: 1px solid #888;
   border-bottom: 2px solid #888;
   margin-top: 10px;
-  height: 67%;
+  height: 51%;
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
 div#cloudBox{
   margin-top: 0px;
-  height: 24%;
+  height: 39%;
 }
 
-div#cloudSource{
+div#dataSource{
   float: right;
   padding-right: 10px;
   margin-top: 5px;
-  font-size: 11px;
+  font-size: 10px;
 }
 
 div#cloud {
-  margin-top: 0px;
-  height: 85%;
+  margin-top: 5px;
+  height: 96%;
+  margin-bottom:25px;
 }
 
 #cloud span {
@@ -236,6 +237,7 @@ div#numTokensText {
   font-size: 12px;
   color: #555;
   margin: 0px;
+  margin-top: 10px;
   padding-left: 10px;
 }
 
