Now you can click on a bar or a label in the chart to bring result up to top bar

--- a/css/chart.css
+++ b/css/chart.css
@@ -45,6 +45,17 @@
     font-size: 13px;
 }
 
+.bar:hover {
+    fill: #88bbee;
+    cursor: pointer;
+}
+
+.bar-label:hover {
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
 .axis line {
   stroke: #ddd;
 }
