--- a/css/map.css
+++ b/css/map.css
@@ -217,10 +217,29 @@ div#cloudBox{
 
 
 #dataSource{
-  float: right;
+  //float: right;
   //padding-right: 10px;
+  position: absolute;
+  margin-left: 10px;
   margin-top: 0px;
   font-size: 10px;
+}
+
+#lock {
+    //position: absolute;
+    float: right;
+    //margin-left: 200px;
+    width: 25px;
+    height: 25px;
+}
+
+
+#lockMode .ui-button {
+    width: 20px;
+}
+
+#lockMode .ui-button-icon-primary {
+    left: 0;
 }
 
 div#cloud {
