--- a/css/map.css
+++ b/css/map.css
@@ -212,25 +212,34 @@ div#cloudBox{
   float: left;
   //padding-left: 10px;
   margin-top: 0px;
-  font-size: 10px;
+  font-size: 9px;
 }
 
 
 #dataSource{
   //float: right;
   //padding-right: 10px;
-  position: absolute;
-  margin-left: 10px;
+  //position: absolute;
+  margin-left: 5px;
   margin-top: 0px;
-  font-size: 10px;
+  font-size: 9px;
 }
+
+#dataNums{
+  //position: absolute;
+  margin-left: 0px;
+  margin-top: 0px;
+  font-size: 9px;
+}
+
 
 #lock {
     //position: absolute;
     float: right;
     //margin-left: 200px;
-    width: 25px;
-    height: 25px;
+    margin-top: 2px;
+    width: 20px;
+    height: 20px;
 }
 
 
