--- a/css/map.css
+++ b/css/map.css
@@ -154,7 +154,17 @@ div#share-dropdown {
 //    background-color: #333 !important;
 //}
 
-div#social{
+div#social {
+  float: right;
+}
+
+.fb-like {
+  float: right;
+  margin-top: 10px;
+  margin-right: 8px;
+}
+
+div#social-share{
   float: right;
   //margin-top:5px;
   height:40px;
@@ -166,7 +176,7 @@ div#social{
 //    list-style-type: none;
 //}
 
-div#social:hover {
+div#social-share:hover {
   background-image: linear-gradient(#5f5f5f, #343434);
   cursor: pointer;
 }
