--- a/css/map.css
+++ b/css/map.css
@@ -25,6 +25,8 @@ div#topbar button:hover {
   box-shadow: 0 0 4px rgba(255,255,255,.7);
 }
 
+
+
 .search { 
   position: relative;
   float: left;
@@ -46,14 +48,6 @@ div#topbar button:hover {
   box-shadow: 0 0 2px rgba(255,255,255,.25);
 }
 
-div#animControls {
-    float:left;
-    margin-top:3px;
-    margin-left: 6px;
-    //position: relative;
-    //bottom:5px;
-    //left:20px;
-}
 
 button#pause {
     margin-left: 10px;
@@ -210,7 +204,7 @@ div#social-share:hover {
   //margin:0px;
   //padding: 0;
   bottom: 0;
-  border: 0px solid #222;
+  border: #777;
   color:white;
   //background-image: linear-gradient(#ef8f8f, #f86868);
   font-size:17px;
@@ -293,10 +287,10 @@ div#map {
 }
 
 div#control {
-  position: absolute;
-  //position: fixed;
+  //position: relative;
+  position: fixed;
   width: 400px;
-  height: 100%;
+  height: 96%;
   padding-top: 10px;
   top: 40px;
   //bottom: 207px;
@@ -311,14 +305,14 @@ div#tweets {
   border-top: 1px solid #888;
   border-bottom: 2px solid #888;
   margin-top: 10px;
-  height: 55%;
+  height: 58%;
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
 div#cloudBox{
   margin-top: 0px;
-  height: 35%;
+  height: 34%;
 }
 
 #displayMode {
@@ -330,7 +324,7 @@ div#cloudBox{
 
 
 #dataSource{
-  //float: right;
+  float: left;
   //padding-right: 10px;
   //position: absolute;
   margin-left: 5px;
@@ -340,6 +334,7 @@ div#cloudBox{
 
 #dataNums{
   //position: absolute;
+  float:left;
   margin-left: 0px;
   margin-top: 0px;
   font-size: 8px;
@@ -480,11 +475,9 @@ div#numTokensText {
     box-shadow: 0 0 2px rgba(100,100,100,.25);
     position:relative;
     border: none!important;
-    margin: 2px 8px 3px 3px;
+    margin: 0px 8px 3px 3px;
     border-radius: 3px;
-    //-webkit-background-clip: padding;
     background-size: cover;
-    //padding:5px;
 }
 
 .social-button {
@@ -496,23 +489,23 @@ div#numTokensText {
 
 .play-icon {
     //border: none!important;
-    background: url('../img/play_green.png') no-repeat center center;
-    width:60px;
-    height:30px;
+    background: url('../img/play-green-20px.png') no-repeat center center;
+    width:40px;
+    height:20px;
 }
 
 .pause-icon {
     border: none!important;
-    background: url('../img/pause_blue.png') no-repeat center center;
-    width:60px;
-    height:30px;
+    background: url('../img/pause-blue-20px.png') no-repeat center center;
+    width:40px;
+    height:20px;
 }
     
 .stop-icon {
     //border: none!important;
-    background: url('../img/stop_reallypink.png') no-repeat center center;
-    width:60px;
-    height:30px;
+    background: url('../img/stop-pink-20px.png') no-repeat center center;
+    width:40px;
+    height:20px;
 }
 
 #link-button {
