--- a/css/map.css
+++ b/css/map.css
@@ -300,6 +300,11 @@ div#control {
   background: #fff;
 }
 
+//.olControlZoomPanel {
+//    top: 17px;
+//    left:14px;
+//}
+
 div#tweets { 
   //border-radius: 5px;
   border-top: 1px solid #888;
@@ -312,7 +317,7 @@ div#tweets {
 
 div#cloudBox{
   margin-top: 0px;
-  height: 34%;
+  height: 35%;
 }
 
 #displayMode {
