--- a/css/map.css
+++ b/css/map.css
@@ -118,9 +118,14 @@ div#submit-icon {
 .drop-menu span {
     color: white !important;
     font-weight:bold !important;
-    font-size: 14px !important;
+    font-size: 12px !important;
 }
 
+/*
+.data-dropdown span {
+  font-size: 12px !important;
+}
+*/
 
 #ui-dialog-title {
     font-size:14px;
@@ -386,16 +391,22 @@ div#toolbar {
   box-shadow: 2px 0 3px rgba(0,0,0,.25);
 }
 
+.choice-text {
+  color: #EE1786;
+  margin-left:6px;
+  font-size: 12px;
+}
+
 .data-menu {
   color:white;
   float:left;
   position:relative;
   height: 30px;
-  font-size: 14px;
+  font-size: 12px;
   font-weight:bold;
   border-right: 2px solid grey;
-  padding-left:10px;
-  width:100px;
+  padding-left:5px;
+  width:114px;
   //padding-right:10px;
 
 }
@@ -412,7 +423,7 @@ div#toolbar {
 
 .drop-triangle {
     float: right;
-    margin-right:5px;
+    margin-right:4px;
 }
 
 /*
@@ -648,10 +659,10 @@ div#widget {
 #share {
     color:white;
     float: right;
-    font-size: 17px;
+    font-size: 12px;
     font-weight:bold;
     //height:0px;
-    margin-top:10px;
+    margin-top:12px;
     margin-right: 5px;
     margin-left: 5px;
     //vertical-align: middle;
