--- a/css/map.css
+++ b/css/map.css
@@ -7,6 +7,10 @@ body {
 a {text-decoration: none;}
 a:hover {text-decoration:underline;}
 
+.olImageLoadError {
+  display: none !important;
+}
+
 div#topbar { 
   position: fixed;
   height: 40px;
@@ -191,7 +195,7 @@ div#social-share:hover {
   position: relative;
   float: left;
   margin-left:10px;
-  margin-top: 5px;
+  margin-top: 4px;
   margin-right: 2px;
   padding: 0;
 }
@@ -206,21 +210,25 @@ div#social-share:hover {
 }
 
 .settings-button {
-  margin: 0px 0px 0px 5px;
+  position: relative;
+  margin: 0px 0px 0px 2px;
   //margin:0px;
-  //padding: 0;
-  bottom: 0;
-  border: #777;
+  padding-right: 5px;
+  //bottom: 4;
+  //top: 5px;
+  //border: #777;
   color:white;
   //background-image: linear-gradient(#ef8f8f, #f86868);
-  font-size:17px;
-  text-align: left;
-  padding-left:10px;
+  background-color:#5f5f5f;
+  font-size:13px;
+  //height: 20px;
+  text-align: right;
+  padding-right:5px;
   font-weight:bold;
-  border-radius: 3px;
-  webkit-box-shadow: 2px rgba(255,255,255,.25);
-  box-shadow: 2px rgba(255,255,255,.25);
-  padding-left:0px;
+  border-radius: 5px;
+  border: 2px outset #444;
+  //webkit-box-shadow: 2px rgba(255,255,255,.25);
+  //box-shadow: 2px rgba(255,255,255,.25);
   cursor: pointer;
 
 
@@ -231,6 +239,24 @@ div#social-share:hover {
   //background-image: linear-gradient(#eee, #ccc 75%, #bbb);
   //webkit-box-shadow: 0 0 2px rgba(255,255,255,.25);
   //box-shadow: 0 0 2px rgba(255,255,255,.25);
+}
+
+.settings-drop-button {
+  margin: 0px;
+  position: relative;
+  //top: 0px;
+  left: -4.5px;
+  height: 28px;
+  color: white;
+  border-radius: 5px;
+  border: 2px outset #444;
+  //background-image: linear-gradient(#5f5f5f, #343434);
+  //background-color:#5f5f5f;
+  background-color:#252525;
+  //webkit-box-shadow: 2px rgba(255,255,255,.25);
+  //box-shadow: 2px rgba(255,255,255,.25);
+  //background: url('../img/buttons/rev_points_110x30_bw.png') no-repeat center center;
+  //border: none!important;
 }
 
 * {
@@ -610,42 +636,42 @@ div#widget {
     border: none!important;
     width: 110px;
     height:30px;
-    background: url('../img/buttons/points_110x30_bw.png') no-repeat center center;
+    background: #252525 url('../img/buttons/rev_points_110x30_bw.png') no-repeat center center;
     opacity: 1.0;
 }
 
 .pointButtonOnImg {
     width: 110px;
     height:30px;
-    background: url('../img/buttons/points_110x30_color.png') no-repeat center center;
+    background: #252525 url('../img/buttons/rev_points_110x30_color.png') no-repeat center center;
     opacity: 1.0;
 }
 
 .pointButtonHoverImg {
     width: 110px;
     height:30px;
-    background: url('../img/buttons/points_110x30_color.png') no-repeat center center;
+    background: #252525 url('../img/buttons/rev_points_110x30_color.png') no-repeat center center;
     opacity: 1.0;
 }
 
 .heatButtonOffImg {
     width: 110px;
     height: 30px;
-    background: url('../img/buttons/heat_110x30_bw.png') no-repeat center center;
+    background: #252525 url('../img/buttons/rev_heat_110x30_bw.png') no-repeat center center;
     opacity: 1.0;
 }
 
 .heatButtonOnImg {
     width: 110px;
     height: 30px;
-    background: url('../img/buttons/heat_110x30_color.png') no-repeat center center;
+    background: #252525 url('../img/buttons/rev_heat_110x30_color.png') no-repeat center center;
     opacity: 1.0;
 }
 
 .heatButtonHoverImg {
     width: 110px;
     height:30px;
-    background: url('../img/buttons/heat_110x30_color.png') no-repeat center center;
+    background: #252525 url('../img/buttons/rev_heat_110x30_color.png') no-repeat center center;
     opacity: 1.0;
 }
 
@@ -655,6 +681,26 @@ div#widget {
   background: url('../img/sprites.png') no-repeat center center;
   opacity: 0.5;
 }
+
+.circle {
+  float: left;
+  //width:20px;
+  //height:20px;
+  background-color: #00f;
+  margin-left:10px;
+  border-radius:50%;
+  //vertical-align: middle;
+}
+
+.circle:hover {
+  border: 1px solid #FFFF00;
+}
+ 
+
+.circle-selected {
+  border: 1px solid #EE1785;
+}
+
 
 #share {
     color:white;
