--- a/css/map.css
+++ b/css/map.css
@@ -268,6 +268,14 @@ div#social-share:hover {
     outline: none;
 }
 
+span.minicolors-swatch-color {
+  border: 3px outset #444;
+}
+
+span.minicolors-swatch {
+  margin-left:60px;
+}
+
 button#gridSmall { 
   height: 20px;
   width: 20px;
@@ -718,6 +726,15 @@ div#widget {
   //border: 1px solid #EE1785;
 }
 
+.miniColors-triggerWrap {
+    float: left;
+    margin-left: 10px;
+}
+
+#pointColorPicker{
+    float:left;
+    margin-left:10px;
+}
 
 
 #share {
