Now using bitly link shortening for copy, twitter and facebook

--- a/css/map.css
+++ b/css/map.css
@@ -140,8 +140,8 @@ div#submit-icon {
 }
 */
 
-#ui-dialog-title {
-    font-size:14px;
+.ui-dialog-title {
+    font-size:10px;
 }
 
 #link-dialog {
