--- a/css/chart.css
+++ b/css/chart.css
@@ -21,6 +21,14 @@
   box-shadow: 3px 0 3px rgba(0,0,0,.25);
 }
 
+.scatterplot {
+    margin-bottom: 20px;
+}
+
+#scatterXVarSelect {
+    margin-left:30%;
+}
+
 .axis {
   shape-rendering: crispEdges;
 }
