--- a/css/map.css
+++ b/css/map.css
@@ -42,7 +42,7 @@ div#topbar button:hover {
   position: relative;
   float: left;
   height: 20px;
-  width: 150px;
+  width: 120px;
   margin: 4px 0 4px 10px;
   padding: 4px;
   padding-right: 17px;
@@ -422,7 +422,7 @@ div#cloudBox{
 
 div#cloud {
   margin-top: 5px;
-  height: 87%;
+  height: 84%;
   margin-bottom:20px;
 }
 
@@ -499,6 +499,7 @@ div#sortPref {
 }
 
 div#numTokensText {
+  float:right; 
   font-size: 12px;
   color: #555;
   margin: 0px;
