--- a/css/map.css
+++ b/css/map.css
@@ -237,7 +237,7 @@ div#social-share:hover {
   text-align: right;
   padding-right:5px;
   font-weight:bold;
-  border-radius: 14px 0px 0px 14px;
+  border-radius: 6px 0px 0px 6px;
   border: 1.5px outset #444;
   //webkit-box-shadow: 2px rgba(255,255,255,.25);
   //box-shadow: 2px rgba(255,255,255,.25);
@@ -265,8 +265,10 @@ div#social-share:hover {
   left: -4.0px;
   height: 28px;
   color: white;
+  //font-size:13px;
+  //font-weight:bold;
   //border-radius: 5px;
-  border-radius: 0px 14px 14px 0px;
+  border-radius: 0px 6px 6px 0px;
   border: 1.5px outset #444;
   background-color:#252525;
   //border: none!important;
