--- a/css/chart.css
+++ b/css/chart.css
@@ -8,10 +8,12 @@
 //  box-shadow: 3px 0 3px rgba(0,0,0,.25);
 //}
 
-.chart {
-  position: fixed;
+#chart {
+  position: absolute;
+  //height: 20%;
   bottom: 0px;
   left: 400px;
+  right: 0px;
   font: 10px sans-serif;
   background-color: white;
   //background-image: linear-gradient(#4f4f4f, #232323);
@@ -20,6 +22,23 @@
   webkit-box-shadow: 3px 0 3px rgba(0,0,0,.25);
   box-shadow: 3px 0 3px rgba(0,0,0,.25);
 }
+
+/*
+.chart {
+  position: absolute;
+  //height: 20%;
+  bottom: 0px;
+  left: 400px;
+  right: 0px;
+  font: 10px sans-serif;
+  background-color: white;
+  //background-image: linear-gradient(#4f4f4f, #232323);
+  border-radius: 5px;
+  border-left: 2px solid gray;
+  webkit-box-shadow: 3px 0 3px rgba(0,0,0,.25);
+  box-shadow: 3px 0 3px rgba(0,0,0,.25);
+}
+*/
 
 .scatterplot {
     margin-bottom: 20px;
