--- a/css/chart.css
+++ b/css/chart.css
@@ -144,12 +144,14 @@ rect.pane {
 }
 
 
-div#animControls {
+#animControls {
   float:left;
   margin-top:10px;
   padding:0px;
   margin-left: 10px;
 }
+
+
 
 .chart-compare { 
   position: relative;
