--- a/css/map.css
+++ b/css/map.css
@@ -56,6 +56,7 @@ div#topbar button:hover {
 }
 
 
+
 button#pause {
     margin-left: 10px;
 }
@@ -321,14 +322,32 @@ div#mapview {
   bottom: 200px;
 }
 
+div#mapAnimControls {
+  position: absolute;
+  //bottom: 14px;
+  //right: 3px;
+  bottom: 5px;
+  left: 110px;
+}
+
+div#mapAnimControls .anim-input {
+    margin: 0px 0px 3px 3px !important;
+}
+
 div#sizeButton {
   position: absolute;
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   z-index: 10000;
-  left: 12px;
+  left: 14px;
   top: 5px;
+  cursor:pointer;
+
 }
+
+
+
+
 
 .expandImg {
   background: url('../img/expand-24.png') no-repeat center center;
